<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="category_sync"
        app:title="@string/sync_category_title">

        <Preference
            app:key="sync_interval"
            app:summary="@string/sync_interval_pref_summary"
            app:title="@string/sync_interval_pref_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_others"
        app:title="@string/others_category_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="others_browser"
            app:title="@string/others_browser_pref_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_help"
        app:title="@string/help_category_title">

        <Preference
            app:key="help_feedback"
            app:summary="@string/help_feedback_pref_summary"
            app:title="@string/help_feedback_pref_title" />

        <Preference
            app:key="help_version"
            app:title="@string/help_version_title" />

    </PreferenceCategory>

</PreferenceScreen>
